fix spacing in eartho

--- a/src/app/components/earthometer-multi/earthometer-styles.scss
+++ b/src/app/components/earthometer-multi/earthometer-styles.scss
@@ -6,6 +6,7 @@
   align-items: center;
   user-select: none;
   margin-bottom: 5rem;
+  margin-top: 5rem;
   position: relative;
 }
 
